Fixed button alignment on mobile devices

--- a/src/Styles/DeletePost.css
+++ b/src/Styles/DeletePost.css
@@ -52,10 +52,8 @@
 }
 button.Delete{
     background: none;
-    border: none;
-    border-radius: 5px;
-    box-shadow: rgba(15, 15, 15, 0.2) 0px 0px 0px 1px, 
-                rgba(15, 15, 15, 0.2) 0px 2px 4px;
+    border: 1px solid var(--red);
+    border-radius: 50px;
     color: var(--red);
     cursor: pointer;
     font-size: small;
